Added responsibilities to all my work experiences

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 managed CI/CD pipelines using Jenkins, Docker, and AWS, ensuring
                 system scalability and high availability.
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="work1.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
           <div class="work">
@@ -188,7 +188,7 @@
                 Sigma standards, and streamlined development with Jenkins-driven
                 CI/CD pipelines.
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="work2.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
           <div class="work">
@@ -204,7 +204,7 @@
                 and GitHub. I focused on security with OAuth2 and improved
                 testing strategies with Selenium and Cucumber.
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="work3.html"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
         </div>
